Fixed flex-wrap for small screens in the illustrations section

--- a/styles/main.css
+++ b/styles/main.css
@@ -153,6 +153,8 @@ h1 {
     gap: 3rem;
     font-size: var(--small);
     color: var(--dark-textColor);
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .illustration {
